# object_pool

./: CMakeLists.txt  README.md
cmake/: dependencies.cmake
include/: pool.h
tests/: CMakeLists.txt  pool-tests.cpp
